# trader

./: .gitignore  Cargo.toml  README.md
src/: backtest.rs  clock.rs  config.rs  main.rs  simulation.rs  strategies.rs  studies.rs  trading.rs
src/apis/: alpha_vantage.rs  candles.rs  mod.rs  polygon.rs  td_ameritrade.rs
