[package]
name = "trader"
version = "0.1.0"
authors = ["jimbonk"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.15"
ureq = { version = "1.4.0", features = ["json"] }
serde_json = "1.0.57"
serde = { version = "1.0.116", features = ["derive"] }
colored = "2.0.0"
